--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,16 @@
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <h1>Users</h1>
+    <table>
+        <thead>
+            <th>&nbsp;</th>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </thead>
+        <tbody id="users">
+    </table>
     <script src="bundle.js"></script>
 </body>
 </html>
